# universal_table_engine

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
tests/: conftest.py  test_adapters_offline.py  test_admin_endpoints.py  test_api_endpoints.py  test_header_detect.py  test_normalize_types.py  test_output_schema.py  test_utils_processing.py
tests/data/: excel_multisheet.xlsx  messy_header_semicolon.csv  sample_messoric.csv  sample_smartbill.csv
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/components/: ArtifactsList.tsx  ClientSelector.tsx  DeliveriesTable.tsx  FileDropZone.tsx  HeadersBuilder.tsx  NotesList.tsx  ParseOptionsForm.tsx  PresetSelector.tsx  ReceiptCard.tsx  ReplayModal.tsx  SchemaTable.tsx  SummaryCard.tsx  WebhookEndpointPanel.tsx
ui/src/lib/: utils.ts
ui/src/pages/: DeliveriesPage.tsx  PresetsPage.tsx  SettingsPage.tsx  (+2 more)
universal_table_engine/: app.py  http_errors.py  logging_conf.py  models.py  presets.py  settings.py  webhook_store.py
universal_table_engine/adapters/: bigquery_adapter.py  json_adapter.py  sheets_adapter.py
universal_table_engine/ingest/: file_reader.py  header_detect.py  llm_helper.py  normalize.py  rules_loader.py  sheet_picker.py  validators.py
universal_table_engine/rules/: default.json  metoric.json  smartbill.json
universal_table_engine/utils/: bigquery.py  dates.py  numbers.py  pii.py  text.py
(+11 files in other folders)
